--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
   <!-- Begin highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
-
+  <link rel="stylesheet" href="{{ '/css/darkmode.css' | relative_url }}">
   <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
 
   <script type="text/javascript" src="/js/highlightjs/languages/plaintext.min.js"></script>
